Improves detection for iPadOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1763,3 +1763,10 @@
     short_name: IPA
     version: "14.0"
     platform: ""
+-
+  user_agent: 'LightSpeed [FBAN/MessengerLiteForiOS;FBAV/270.1.0.54.119;FBBV/225524353;FBDV/iPad7,5;FBMD/iPad;FBSN/iOS;FBSV/13.5.1;FBSS/2;FBCR/;FBID/tablet;FBLC/es_ES;FBOP/0]'
+  os:
+    name: iPadOS
+    short_name: IPA
+    version: 13.5.1
+    platform: ""
