--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -336,6 +336,10 @@
 ##########
 # iPadOS (https://www.apple.com/ipados/)
 ##########
+- regex: 'FBMD/iPad;.*FBSV/ ?(1[34]).(\d+[\.\d]*);'
+  name: 'iPadOS'
+  version: '$1.$2'
+
 - regex: 'iPad/(1[34]).(\d+[\.\d]*)'
   name: 'iPadOS'
   version: '$1.$2'
