--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Cornowser (https://github.com/xdevs23/Cornowser)
+- regex: 'Cornowser/(\d+[\.\d]+)'
+  name: 'Cornowser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Orca (http://www.orcabrowser.com)
 - regex: 'Orca/(\d+[\.\d]+)'
   name: 'Orca'
