Improves detection for Samsung Galaxy M11

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13161,7 +13161,7 @@ Samsung:
       model: 'Galaxy M10'
     - regex: '(?:SAMSUNG-)?SM-M107F'
       model: 'Galaxy M10s'
-    - regex: '(?:SAMSUNG-)?SM-M115F'
+    - regex: '(?:SAMSUNG-)?SM-M115[FM]'
       model: 'Galaxy M11'
     - regex: '(?:SAMSUNG-)?SM-M205[FGNM]'
       model: 'Galaxy M20'
