Adds detection for Samsung Galaxy M12

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13163,6 +13163,8 @@ Samsung:
       model: 'Galaxy M10s'
     - regex: '(?:SAMSUNG-)?SM-M115[FM]'
       model: 'Galaxy M11'
+    - regex: '(?:SAMSUNG-)?SM-M127[FG]'
+      model: 'Galaxy M12'
     - regex: '(?:SAMSUNG-)?SM-M205[FGNM]'
       model: 'Galaxy M20'
     - regex: '(?:SAMSUNG-)?SM-M215F'
