Adds detection for Samsung Galaxy A32 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12945,6 +12945,8 @@ Samsung:
       model: 'Galaxy A3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A320(?:FL|[FYX])'
       model: 'Galaxy A3 (2017)'
+    - regex: '(?:SAMSUNG-)?SM-A326(?:BR|B)'
+      model: 'Galaxy A32 5G'
     - regex: '(?:SAMSUNG-)?SM-A500[LSWY9]?(?:[);/ ]|$)'
       model: 'Galaxy A5'
     - regex: '(?:SAMSUNG-)?SM-A500[FGHKM0]'
