Adds detection for Samsung Galaxy M01 Core

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13159,6 +13159,8 @@ Samsung:
       model: 'Galaxy J9 8 Pro'
     - regex: '(?:SAMSUNG-)?SM-M015[FG]'
       model: 'Galaxy M01'
+    - regex: '(?:SAMSUNG-)?SM-M013F'
+      model: 'Galaxy M01 Core'
     - regex: '(?:SAMSUNG-)?SM-M105[FGM]'
       model: 'Galaxy M10'
     - regex: '(?:SAMSUNG-)?SM-M107F'
