Adds detection for Samsung Galaxy M01s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13161,6 +13161,8 @@ Samsung:
       model: 'Galaxy M01'
     - regex: '(?:SAMSUNG-)?SM-M013F'
       model: 'Galaxy M01 Core'
+    - regex: '(?:SAMSUNG-)?SM-M017F'
+      model: 'Galaxy M01s'
     - regex: '(?:SAMSUNG-)?SM-M105[FGM]'
       model: 'Galaxy M10'
     - regex: '(?:SAMSUNG-)?SM-M107F'
