--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13163,6 +13163,8 @@ Samsung:
       model: 'Galaxy M01 Core'
     - regex: '(?:SAMSUNG-)?SM-M017F'
       model: 'Galaxy M01s'
+    - regex: '(?:SAMSUNG-)?SM-M025F'
+      model: 'Galaxy M02s'
     - regex: '(?:SAMSUNG-)?SM-M105[FGM]'
       model: 'Galaxy M10'
     - regex: '(?:SAMSUNG-)?SM-M107F'
