Adds detection for ZTE Blade A3 (2020) and improves regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17144,16 +17144,8 @@ ZTE:
       model: 'Blade L7'
     - regex: 'Blade L8(?:RU)?(?:[);/ ]|$)'
       model: 'Blade L8'
-    - regex: 'Blade A3 2019'
-      model: 'Blade A3 (2019)'
-    - regex: 'Blade A7 2019'
-      model: 'Blade A7 (2019)'
-    - regex: 'Blade A7 2020'
-      model: 'Blade A7 (2020)'
-    - regex: 'Blade A5 2019'
-      model: 'Blade A5 (2019)'
-    - regex: 'Blade A5 2020'
-      model: 'Blade A5 (2020)'
+    - regex: 'Blade A([357]) (20(?:19|20))'
+      model: 'Blade A$1 ($2)'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
       model: 'Blade A6'
     - regex: 'BLADE A6 MAX(?:[);/ ]|$)'
