Adds detection for ZTE Blade A3 Lite

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17146,6 +17146,8 @@ ZTE:
       model: 'Blade L8'
     - regex: 'Blade A([357]) (20(?:19|20))'
       model: 'Blade A$1 ($2)'
+    - regex: 'Blade A3 Lite(?:[);/ ]|$)'
+      model: 'Blade A3 Lite'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
       model: 'Blade A6'
     - regex: 'BLADE A6 MAX(?:[);/ ]|$)'
