Adds detection for ZTE Blade A522

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17120,7 +17120,7 @@ ZTE:
       model: 'Optus X Wave'
     - regex: 'Optus X Start(?:[);/ ]|$)'
       model: 'Optus X Start'
-    - regex: 'Blade (A(0620|310|452|460|462|465|475|510|512|520|530|531|602|612|910)|L[12]10|L130|V10|V0730|V0800|V580|V1000)(?:[);/ ]|$)'
+    - regex: 'Blade (A(0620|310|452|460|462|465|475|510|512|520|522|530|531|602|612|910)|L[12]10|L130|V10|V0730|V0800|V580|V1000)(?:[);/ ]|$)'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus(?:[);/ ]|$)'
       model: 'Blade L2 Plus'
