Improves detection for ZTE Blade L2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17124,7 +17124,7 @@ ZTE:
       model: 'Blade $1'
     - regex: 'Blade L2 Plus(?:[);/ ]|$)'
       model: 'Blade L2 Plus'
-    - regex: 'Blade L2(?:[);/ ]|$)'
+    - regex: '(?:ZTE_)?Blade[ _]L2(?:[);/ ]|$)'
       model: 'Blade L2'
     - regex: 'Blade L3 Plus(?:[);/ ]|$)'
       model: 'Blade L3 Plus'
