--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -9980,3 +9980,21 @@
     model: Blade A321
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 4.2.2; es-LA; ZTE_Blade_L2) U2/1.0.0 UCBrowser/9.2.0.419 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 9.2.0.419
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Blade L2
+  os_family: Android
+  browser_family: Unknown
