--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -9998,3 +9998,21 @@
     model: Blade L2
   os_family: Android
   browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; U; Android 4.4.2; es-LA; ZTE_Blade_C2_Plus Build/KOT49H) AppleWebKit/528.5  (KHTML, like Gecko) Version/3.1.2 Mobile Safari/525.20.1 UCBrowser/10.2.0.584 Mobile'
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 10.2.0.584
+    engine: WebKit
+    engine_version: "528.5"
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Blade C2 Plus
+  os_family: Android
+  browser_family: Unknown
