Adds detection for ZTE Blade G Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17090,6 +17090,8 @@ ZTE:
       model: 'Blade C2'
     - regex: 'ZTE_Blade_C2_Plus'
       model: 'Blade C2 Plus'
+    - regex: 'Blade G Plus'
+      model: 'Blade G Plus'
     - regex: '(?:ZTE_)?V829'
       model: 'Blade G Pro'
     - regex: 'V882'
