--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -10034,3 +10034,21 @@
     model: Blade G Plus
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 4.0.4; en-US; ZTE_Blade_III) U2/1.0.0 UCBrowser/9.1.1.420 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 9.1.1.420
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Blade III
+  os_family: Android
+  browser_family: Unknown
