--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17092,6 +17092,8 @@ ZTE:
       model: 'Blade C2 Plus'
     - regex: 'Blade G Plus'
       model: 'Blade G Plus'
+    - regex: 'ZTE_Blade_III'
+      model: 'Blade III'
     - regex: '(?:ZTE_)?V829'
       model: 'Blade G Pro'
     - regex: 'V882'
