--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17126,7 +17126,7 @@ ZTE:
       model: 'Optus X Wave'
     - regex: 'Optus X Start(?:[);/ ]|$)'
       model: 'Optus X Start'
-    - regex: 'Blade (A(0620|310|321|452|460|462|465|475|510|512|52[012]|530|531|602|612|910)|L[12]10|L130|V10|V0730|V0800|V580|V1000)(?:[);/ ]|$)'
+    - regex: 'Blade (A(0620|310|321|452|460|462|465|475|510|512|52[012]|530|531|602|612|910)|L[12]10|L130|V0730|V0800|V580|V1000)(?:[);/ ]|$)'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus(?:[);/ ]|$)'
       model: 'Blade L2 Plus'
@@ -17182,7 +17182,7 @@ ZTE:
       model: 'Blade V8 SE'
     - regex: 'Blade V(9|10) Vita(?:[);/ ]|$)'
       model: 'Blade V$1 Vita'
-    - regex: 'Blade V([89])(?:[);/ ]|$)'
+    - regex: 'Blade V([89]|10)(?:[);/ ]|$)'
       model: 'Blade V$1'
     - regex: 'BLADE V0820(?:[);/ ]|$)'
       model: 'Blade V8 Lite'
