Improves detection for Samsung Galaxy S20 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12903,7 +12903,7 @@ Samsung:
       model: 'Galaxy S10e'
     - regex: '(?:SAMSUNG-)?SM-G980F'
       model: 'Galaxy S20'
-    - regex: '(?:SAMSUNG-)?SM-G981(?:[0BNUW]|U1)|SCG01'
+    - regex: '(?:SAMSUNG-)?SM-G981(?:[0BNUVW]|U1)|SCG01'
       model: 'Galaxy S20 5G'
     - regex: '(?:SAMSUNG-)?SM-G780F'
       model: 'Galaxy S20 FE'
