Improves detection for Samsung Galaxy S6

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12867,7 +12867,7 @@ Samsung:
       model: 'Galaxy S5 Neo'
     - regex: '(?:SAMSUNG-)?SM-G860P'
       model: 'Galaxy S5 K Sport'
-    - regex: '(?:SAMSUNG-)?(?:SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?|SM-S907VL)|SC-05G'
+    - regex: '(?:SAMSUNG-)?(?:SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?|SM-S906L|SM-S907VL)|SC-05G'
       model: 'Galaxy S6'
     - regex: '(?:SAMSUNG-)?SM-G890A'
       model: 'Galaxy S5 Active'
