--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -9728,3 +9728,21 @@
     model: Galaxy S20 Ultra 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.0.2; SM-S906L Build/LRX22G)
+  os:
+    name: Android
+    version: 5.0.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy S6
+  os_family: Android
+  browser_family: Android Browser
