Improves detection for Samsung Galaxy S6 Edge+

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12873,7 +12873,7 @@ Samsung:
       model: 'Galaxy S5 Active'
     - regex: '(?:SAMSUNG-)?SM-G925[0ADFIKLPRSTVWX]|SCV31|404SC'
       model: 'Galaxy S6 Edge'
-    - regex: '(?:SAMSUNG-)?SM-G928(?:7C|R4|W8|[07ACFGIKLPSTVX])'
+    - regex: '(?:SAMSUNG-)?SM-G928(?:7C|N0|R4|W8|[07ACFGIKLPSTVX])'
       model: 'Galaxy S6 Edge+'
     - regex: '(?:SAMSUNG-)?SM-G930(?:FD|W8|[0AFKLPRSTUVX8]|T1|AZ)?(?:[);/ ]|$)'
       model: 'Galaxy S7'
