Adds detection for Samsung Galaxy S20 FE 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12907,6 +12907,8 @@ Samsung:
       model: 'Galaxy S20 5G'
     - regex: '(?:SAMSUNG-)?SM-G780F'
       model: 'Galaxy S20 FE'
+    - regex: '(?:SAMSUNG-)?SM-G781(?:U1|[0BNUVW])'
+      model: 'Galaxy S20 FE 5G'
     - regex: '(?:SAMSUNG-)?SM-G988(?:[0BNQUW]|U1)|SCG03'
       model: 'Galaxy S20 Ultra 5G'
     - regex: '(?:SAMSUNG-)?SM-G985F|SCG02'
