--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12935,6 +12935,8 @@ Samsung:
       model: 'Vollo Vi86'
     - regex: '(?:SAMSUNG-)?SM-G386(?:T1|T)'
       model: 'Galaxy Avant'
+    - regex: '(?:SAMSUNG-)?SM-A716S'
+      model: 'Galaxy A Quantum'
     - regex: '(?:SAMSUNG-)?SM-A015[AFGM]'
       model: 'Galaxy A01'
     - regex: '(?:SAMSUNG-)?SM-A013M'
