Improves detection for Samsung Galaxy A01

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12937,7 +12937,7 @@ Samsung:
       model: 'Galaxy Avant'
     - regex: '(?:SAMSUNG-)?SM-A716S'
       model: 'Galaxy A Quantum'
-    - regex: '(?:SAMSUNG-)?SM-A015[AFGM]'
+    - regex: '(?:SAMSUNG-)?SM-(?:A015(?:DL|[TU]1|[AFGMUV])|S111DL)'
       model: 'Galaxy A01'
     - regex: '(?:SAMSUNG-)?SM-A013M'
       model: 'Galaxy A01 Core'
