--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -10480,3 +10480,39 @@
     model: Galaxy A01
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SAMSUNG SM-A013F Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 SamsungBrowser/7.4 Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "7.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A01 Core
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SAMSUNG SM-A013G Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 SamsungBrowser/7.4 Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "7.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A01 Core
+  os_family: Android
+  browser_family: Chrome
