--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12939,7 +12939,7 @@ Samsung:
       model: 'Galaxy A Quantum'
     - regex: '(?:SAMSUNG-)?SM-(?:A015(?:DL|[TU]1|[AFGMUV])|S111DL)'
       model: 'Galaxy A01'
-    - regex: '(?:SAMSUNG-)?SM-A013M'
+    - regex: '(?:SAMSUNG-)?SM-A013[FGM]'
       model: 'Galaxy A01 Core'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
