Adds detection for Samsung Galaxy A02s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12941,6 +12941,8 @@ Samsung:
       model: 'Galaxy A01'
     - regex: '(?:SAMSUNG-)?SM-A013[FGM]'
       model: 'Galaxy A01 Core'
+    - regex: '(?:SAMSUNG-)?SM-A025[FGM]'
+      model: 'Galaxy A02s'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
     - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|XU|[09FGHMY])'
