Improves detection for Samsung Galaxy A11

--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -10570,3 +10570,99 @@
     model: Galaxy A02s
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; SM-A115A Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/278.0.0.51.119;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 278.0.0.51.119
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A11
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; SM-A115AP Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/278.0.0.51.119;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 278.0.0.51.119
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A11
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; SM-A115AZ Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/278.0.0.51.119;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 278.0.0.51.119
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A11
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; SM-A115U Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/278.0.0.51.119;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 278.0.0.51.119
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A11
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; SM-A115U1 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/278.0.0.51.119;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 278.0.0.51.119
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A11
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; SM-A115W Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/80.0.3987.99 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/278.0.0.51.119;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 278.0.0.51.119
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A11
+  os_family: Android
+  browser_family: Unknown
