--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13009,7 +13009,7 @@ Samsung:
       model: 'Galaxy A10s'
     - regex: '(?:SAMSUNG-)?SM-(?:S102DL|A102[NWU])'
       model: 'Galaxy A10e'
-    - regex: '(?:SAMSUNG-)?SM-A115[FM]'
+    - regex: '(?:SAMSUNG-)?SM-A115(?:A[PZ]|U1|[AFMUW])'
       model: 'Galaxy A11'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSWU]|YN|U1)|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
