Adds detection for Samsung Galaxy A12

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13011,6 +13011,8 @@ Samsung:
       model: 'Galaxy A10e'
     - regex: '(?:SAMSUNG-)?SM-A115(?:A[PZ]|U1|[AFMUW])'
       model: 'Galaxy A11'
+    - regex: '(?:SAMSUNG-)?SM-A125[FM]'
+      model: 'Galaxy A12'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSWU]|YN|U1)|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
     - regex: '(?:SAMSUNG-)?SM-A215U(?:[);/ ]|$)'
