Improves detection for Samsung Galaxy A21s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13017,7 +13017,7 @@ Samsung:
       model: 'Galaxy A20'
     - regex: '(?:SAMSUNG-)?SM-A215U(?:[);/ ]|$)'
       model: 'Galaxy A21'
-    - regex: '(?:SAMSUNG-)?SM-A217[FM](?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-A217[FMN](?:[);/ ]|$)'
       model: 'Galaxy A21s'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
       model: 'Galaxy A20e'
