Improves detection for Samsung Galaxy A21

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13015,7 +13015,7 @@ Samsung:
       model: 'Galaxy A12'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSWU]|YN|U1)|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
-    - regex: '(?:SAMSUNG-)?SM-A215U(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-A215(?:DL|U1|[UW])(?:[);/ ]|$)'
       model: 'Galaxy A21'
     - regex: '(?:SAMSUNG-)?SM-A217[FMN](?:[);/ ]|$)'
       model: 'Galaxy A21s'
