Improves detection for Samsung Galaxy A3 (2015)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12945,7 +12945,7 @@ Samsung:
       model: 'Galaxy A02s'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'Galaxy A2 Core'
-    - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|XU|[09FGHMY])'
+    - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|XU|XZ|[09FGHMXY])'
       model: 'Galaxy A3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-A310(?:N0|[FMYX])'
       model: 'Galaxy A3 (2016)'
