feat(tests) added test for brand ZTE models: Zinger, Avail 2, ZMax Z970
issue #6616

--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -2208,9 +2208,9 @@
     engine: WebKit
     engine_version: "535.19"
   device:
-    type: tablet
-    brand: Zync
-    model: Z99
+    type: smartphone
+    brand: ZTE
+    model: Avail 2
   os_family: Android
   browser_family: Chrome
 - 
