--- a/Tests/fixtures/smartphone-8.yml
+++ b/Tests/fixtures/smartphone-8.yml
@@ -8966,3 +8966,57 @@
     model: Flame 5
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4; Z667T Build/KVT49L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.141 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "4.4"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 35.0.1916.141
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Zinger
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1; ZTE-Z992 Build/JRO03C) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: "4.1"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Avail 2
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 Linux; Android 4.4.4; Z970 AppleWebKit/537.36 KHTML, like Gecko Chrome/75.0.3770.89 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: ZTE
+    model: ZMax Z970
+  os_family: Android
+  browser_family: Chrome
