feat(device) detect apple devices from Sonos client feat(os) detect apple oss from Sonoc client

--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6844,3 +6844,35 @@
     model: MacBook Pro (2008)
   os_family: Mac
   browser_family: Safari
+-
+  user_agent: Linux UPnP/1.0 Sonos/54.2-72031 (MDCR_MacBookPro14,1)
+  os:
+    name: Mac
+    version: ""
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "54.2"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 13" (2017)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Linux UPnP/1.0 Sonos/53.3-71050 (MDCR_Macmini8,1)
+  os:
+    name: Mac
+    version: ""
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "53.3"
+  device:
+    type: desktop
+    brand: Apple
+    model: Mac Mini (2018)
+  os_family: Mac
+  browser_family: Unknown
