--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1742,3 +1742,15 @@
     short_name: CAI
     version: ""
     platform: x64
+-
+  user_agent: Linux UPnP/1.0 Sonos/50.1-65071 (ACR_:samsung:dreamqltevl:SM-G950W)
+  os:
+    name: Android
+    version: ""
+    platform: ""
+-
+  user_agent: Linux UPnP/1.0 Sonos/29.3-87071 (ICRU_iPhone7,1); iOS/Version 8.2 (Build 12D508)
+  os:
+    name: iOS
+    version: "8.2"
+    platform: ""
