--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -9538,3 +9538,51 @@
     model: MAX Blue LTE
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Linux UPnP/1.0 Sonos/29.3-87071 (ICRU_iPhone7,1); iOS/Version 8.2 (Build 12D508)
+  os:
+    name: iOS
+    version: "8.2"
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "29.3"
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 6 Plus
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Linux UPnP/1.0 Sonos/54.2-72031 (ICRU_iPhone11,6)
+  os:
+    name: iOS
+    version: ""
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "54.2"
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone XS Max
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Linux UPnP/1.0 Sonos/52.13-69030 (ICRU_iPhone10,3)
+  os:
+    name: iOS
+    version: ""
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "52.13"
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone X
+  os_family: iOS
+  browser_family: Unknown
