--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -8983,3 +8983,35 @@
     model: G20
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Linux UPnP/1.0 Sonos/61.1-82310 (ICRU_iPad7,1)
+  os:
+    name: iOS
+    version: ""
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "61.1"
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Pro 2 12.9
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Linux UPnP/1.0 Sonos/53.3-71200 (ICRU_iPad5,4)
+  os:
+    name: iOS
+    version: ""
+    platform: ""
+  client:
+    type: mediaplayer
+    name: SONOS
+    version: "53.3"
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad Air 2
+  os_family: iOS
+  browser_family: Unknown
