Improves detection for Samsung Galaxy Note 7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13350,7 +13350,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-I920[05]'
       model: 'Galaxy Mega 6.3'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:SM-N930[VFST0P]|SCV34)'
+    - regex: '(?:SAMSUNG-)?(?:SM-N930(?:R[467]|W8|[0AFKLPSTUVX])|SCV34)'
       model: 'Galaxy Note 7'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?SM-N950|SCV37|SC-01K'
