--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5506,3 +5506,165 @@
     model: Galaxy Z Fold 2 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930X Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930K Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930A Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930L Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930U Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930R4 Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930R6 Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930R7 Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-N930W8 Build/MMB29K)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 7
+  os_family: Android
+  browser_family: Android Browser
