Change model name from Galaxy Xcover 3 to Galaxy Xcover 3 VE for SM-G389F and removes duplicate regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12801,14 +12801,16 @@ Samsung:
       model: 'Galaxy S DUOS 3'
     - regex: '(?:SAMSUNG-)?GT-S7710'
       model: 'Galaxy Xcover 2'
-    - regex: '(?:SAMSUNG-)?SM-G389F'
+    - regex: '(?:SAMSUNG-)?SM-G388F'
       model: 'Galaxy Xcover 3'
-    - regex: '(?:SAMSUNG-)?SM-G715FN'
-      model: 'Galaxy Xcover Pro'
+    - regex: '(?:SAMSUNG-)?SM-G389F'
+      model: 'Galaxy Xcover 3 VE'
+    - regex: '(?:SAMSUNG-)?SM-G390[FWY]'
+      model: 'Galaxy Xcover 4'
     - regex: '(?:SAMSUNG-)?SM-G398FN'
       model: 'Galaxy Xcover 4s'
-    - regex: '(?:SAMSUNG-)?SM-G390Y'
-      model: 'Galaxy Xcover 4'
+    - regex: '(?:SAMSUNG-)?SM-G715FN'
+      model: 'Galaxy Xcover Pro'
     - regex: '(?:SAMSUNG-)?GT-S8500'
       model: 'Wave'
     - regex: '(?:SAMSUNG-)?GT-S8530'
@@ -12849,10 +12851,6 @@ Samsung:
       model: 'Galaxy Core Max'
     - regex: '(?:SAMSUNG-)?SM-G3815'
       model: 'Galaxy EXPRESS II'
-    - regex: '(?:SAMSUNG-)?SM-G388F'
-      model: 'Galaxy Xcover 3'
-    - regex: '(?:SAMSUNG-)?SM-G390[FW]'
-      model: 'Galaxy Xcover 4'
     - regex: '(?:SAMSUNG-)?SM-G800'
       model: 'Galaxy S5 mini'
     - regex: '(?:SAMSUNG-)?SM-G9009D'
