Improves detection for Samsung Galaxy Xcover Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12809,7 +12809,7 @@ Samsung:
       model: 'Galaxy Xcover 4'
     - regex: '(?:SAMSUNG-)?SM-G398FN'
       model: 'Galaxy Xcover 4s'
-    - regex: '(?:SAMSUNG-)?SM-G715FN'
+    - regex: '(?:SAMSUNG-)?SM-G715(?:FN|U1|[AUW])'
       model: 'Galaxy Xcover Pro'
     - regex: '(?:SAMSUNG-)?GT-S8500'
       model: 'Wave'
