Adds detection for Samsung Galaxy Xcover FieldPro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12811,6 +12811,8 @@ Samsung:
       model: 'Galaxy Xcover 4s'
     - regex: '(?:SAMSUNG-)?SM-G715(?:FN|U1|[AUW])'
       model: 'Galaxy Xcover Pro'
+    - regex: '(?:SAMSUNG-)?SM-G889(?:YB|[AFG])'
+      model: 'Galaxy Xcover FieldPro'
     - regex: '(?:SAMSUNG-)?GT-S8500'
       model: 'Wave'
     - regex: '(?:SAMSUNG-)?GT-S8530'
