--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11008,3 +11008,67 @@
     model: Galaxy Xcover Pro
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 8.1.0; SM-G889A Build/M1AJQ; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.138 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/270.0.0.57.127;]'
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 270.0.0.57.127
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Xcover FieldPro
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 8.1.0; SM-G889F Build/M1AJQ; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.138 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/270.0.0.57.127;]'
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 270.0.0.57.127
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Xcover FieldPro
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 8.1.0; SM-G889G Build/M1AJQ; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.138 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/270.0.0.57.127;]'
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 270.0.0.57.127
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Xcover FieldPro
+  os_family: Android
+  browser_family: Unknown
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 8.1.0; SM-G889YB Build/M1AJQ; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.138 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/270.0.0.57.127;]'
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 270.0.0.57.127
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Xcover FieldPro
+  os_family: Android
+  browser_family: Unknown
