Improves detection for Samsung Galaxy A70

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13051,7 +13051,7 @@ Samsung:
       model: 'Galaxy A51'
     - regex: '(?:SAMSUNG-)?SCG07'
       model: 'Galaxy A51 5G'
-    - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|F|[W0X])'
+    - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|[0FUWX])'
       model: 'Galaxy A70'
     - regex: '(?:SAMSUNG-)?SM-A707[0F]'
       model: 'Galaxy A70s'
