Improves detection for Samsung Galaxy A51 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13049,7 +13049,7 @@ Samsung:
       model: 'Galaxy A50s'
     - regex: '(?:SAMSUNG-)?SM-(?:A515[FUW]|S515DL)'
       model: 'Galaxy A51'
-    - regex: '(?:SAMSUNG-)?SCG07'
+    - regex: '(?:SAMSUNG-)?(?:SM-A516(?:U1|[0BNUV])|SCG07)'
       model: 'Galaxy A51 5G'
     - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|[0FUWX])'
       model: 'Galaxy A70'
