Improves detection for Samsung Galaxy Grand 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13293,7 +13293,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-N7105'
       model: 'Galaxy Note II LTE'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G710[25L]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-G710(?:2T|5[HL]|[25689KLS])?(?:[);/ ]|$)'
       model: 'Galaxy Grand 2'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|[02])(?:[);/ ]|$)'
