Improves detection for Samsung Galaxy Core 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12837,7 +12837,7 @@ Samsung:
       model: 'Galaxy K zoom'
     - regex: '(?:SAMSUNG-)?SM-G318[HM]Z'
       model: 'Galaxy V Plus'
-    - regex: '(?:SAMSUNG-)?SM-(?:G355[HM]|G3556D)'
+    - regex: '(?:SAMSUNG-)?SM-G355(?:6D|[89HM])'
       model: 'Galaxy Core 2'
     - regex: '(?:SAMSUNG-)?SM-G350'
       model: 'Galaxy Core Plus'
