--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11252,3 +11252,39 @@
     model: Galaxy A51 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; SM-G3558 Build/KOT49H)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Core 2
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; SM-G3559 Build/KOT49H)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Core 2
+  os_family: Android
+  browser_family: Android Browser
