Improves detection for Samsung Galaxy Folder

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13236,7 +13236,7 @@ Samsung:
       model: 'Galaxy Z3'
     - regex: '(?:SAMSUNG-)?SM-Z400[FY]'
       model: 'Galaxy Z4'
-    - regex: '(?:SAMSUNG-)?SM-(?:G150|G155S)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G150(?:N[0KLS])?|G155S)(?:[);/ ]|$)'
       model: 'Galaxy Folder'
     - regex: '(?:SAMSUNG-)?(?:SM-G16(?:0N|[05]0?))(?:[);/ ]|$)'
       model: 'Galaxy Folder 2'
