--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11358,3 +11358,75 @@
     model: Galaxy A71 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; SM-G150NK Build/LMY47X)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Folder
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; SM-G150N0 Build/LMY47X)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Folder
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; SM-G150NL Build/LMY47X)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Folder
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; SM-G150NS Build/LMY47X)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Folder
+  os_family: Android
+  browser_family: Android Browser
