Improves detection for Samsung Galaxy Note 20 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13373,7 +13373,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N980(?:F/DS|F))'
       model: 'Galaxy Note 20'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N981(?:B/DS|U1|[BNUW]))'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N981(?:B/DS|U1|[0BNUW]))'
       model: 'Galaxy Note 20 5G'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?(?:SM-N985(?:F/DS|F))'
