--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5812,3 +5812,21 @@
     model: Galaxy Grand 2
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SAMSUNG SM-N9810) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/12.1 Chrome/79.0.3945.136 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "12.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 20 5G
+  os_family: Android
+  browser_family: Chrome
