Improves detection for Samsung Galaxy Note 20 Ultra 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13379,7 +13379,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N985(?:F/DS|F))'
       model: 'Galaxy Note 20 Ultra'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:B/DS|U1|[BNUW])|SCG06)'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:B/DS|U1|[0BNUW])|SCG06)'
       model: 'Galaxy Note 20 Ultra 5G'
       device: 'phablet'
 
