--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5830,3 +5830,19 @@
     model: Galaxy Note 20 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-N9860 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/85.0.4183.127 Mobile Safari/537.36 GSA/11.30.9.21.arm64
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.30.9.21
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Note 20 Ultra 5G
+  os_family: Android
+  browser_family: Unknown
