Improves detection for Samsung Galaxy Fold

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13254,7 +13254,7 @@ Samsung:
       model: 'Galaxy Amp Prime 3 (2018)'
 
     # explicit phablet models
-    - regex: '(?:SAMSUNG-)?SM-(?:F900[0FU]|F907[BN])|SCV44'
+    - regex: '(?:SAMSUNG-)?SM-(?:F900[0FUW]|F907[BN])|SCV44'
       model: 'Galaxy Fold'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-F9160|SCG05'
