Improves detection for Samsung Galaxy Note Pro 12.2"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12639,7 +12639,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T39[057][U]?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab Active 2 8.0"'
-    - regex: '(?:SAMSUNG-)?SM-P902(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:P902|P907A)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Note Pro 12.2"'
 
