Adds detection for Samsung Galaxy A42 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13041,6 +13041,8 @@ Samsung:
       model: 'Galaxy A40s'
     - regex: '(?:SAMSUNG-)?(?:SM-A415F|SCV48)(?:[);/ ]|$)'
       model: 'Galaxy A41'
+    - regex: '(?:SAMSUNG-)?SM-A426[0BN](?:[);/ ]|$)'
+      model: 'Galaxy A42 5G'
     - regex: '(?:SAMSUNG-)?SM-(?:A505(?:F[GN]|U1|YN|[FGNUWX])|S506DL|505FN)'
       model: 'Galaxy A50'
     - regex: '(?:SAMSUNG-)?SM-A5070(?:[);/ ]|$)'
