Rename Samsung Galaxy Z Fold 2 to Samsung Galaxy Z Fold 2 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13259,10 +13259,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:F900[0FUW]|F907[BN])|SCV44'
       model: 'Galaxy Fold'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-F9160|SCG05'
-      model: 'Galaxy Z Fold 2'
-      device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-F916(?:U1|[BNQUW])'
+    - regex: '(?:SAMSUNG-)?SM-F916(?:U1|[0BNQUW])|SCG05'
       model: 'Galaxy Z Fold 2 5G'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?GT-I9060(?:[);/ ]|$)'
