--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5864,3 +5864,57 @@
     model: Galaxy Fold
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SCG05) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 87.0.4280.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Z Fold 2 5G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-F9160) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.99 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 86.0.4240.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Z Fold 2 5G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-F9160) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.99 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 86.0.4240.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Z Fold 2 5G
+  os_family: Android
+  browser_family: Chrome
