Improves detection for Samsung Galaxy A9

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13002,7 +13002,7 @@ Samsung:
       model: 'Galaxy A8 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A730F'
       model: 'Galaxy A8+ (2018)'
-    - regex: '(?:SAMSUNG-)?SM-A9000'
+    - regex: '(?:SAMSUNG-)?SM-A900[0F]'
       model: 'Galaxy A9'
     - regex: 'SM-A9\[7\]'
       model: 'Galaxy A9 7'
