--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11628,3 +11628,21 @@
     model: Galaxy A90 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-A900F Build/MMB29M)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A9
+  os_family: Android
+  browser_family: Android Browser
