Adds detection for Samsung Galaxy Tab Q

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13388,6 +13388,9 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N986(?:B/DS|U1|[0BNUW])|SC-53A|SCG06)'
       model: 'Galaxy Note 20 Ultra 5G'
       device: 'phablet'
+    - regex: '(?:SAMSUNG[- ])?SM-T2519'
+      model: 'Galaxy Tab Q'
+      device: 'phablet'
 
     - regex: '(?:SAMSUNG-)?SM-W750V'
       model: 'Ativ SE'
