--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5936,3 +5936,21 @@
     model: Galaxy Note 20 Ultra 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 4.3; SM-T2519 Build/MMB29M)
+  os:
+    name: Android
+    version: "4.3"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Samsung
+    model: Galaxy Tab Q
+  os_family: Android
+  browser_family: Android Browser
