Improves detection for Samsung Galaxy Tab S7+ 12.4" LTE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12567,7 +12567,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T82[57]'
       device: 'tablet'
       model: 'Galaxy Tab S3 9.7" LTE'
-    - regex: '(?:SAMSUNG-)?SM-T975(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-T975N?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S7+ 12.4" LTE'
     - regex: '(?:SAMSUNG-)?SM-T970(?:[);/ ]|$)'
