--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9563,3 +9563,21 @@
     model: Galaxy Tab S7 11.0" LTE
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-T975N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.110 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 86.0.4240.110
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab S7+ 12.4" LTE
+  os_family: Android
+  browser_family: Chrome
