Improves detection for Samsung Galaxy Tab S7+ 12.4" 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12573,7 +12573,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T970(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S7+ 12.4" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T976B(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T976[BN]|T978U)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S7+ 12.4" 5G'
     - regex: '(?:SAMSUNG-)?SM-T870(?:[);/ ]|$)'
