Adds detection for Samsung Galaxy M51

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13220,6 +13220,8 @@ Samsung:
       model: 'Galaxy M31s'
     - regex: '(?:SAMSUNG-)?SM-M405'
       model: 'Galaxy M40'
+    - regex: '(?:SAMSUNG-)?SM-M515F'
+      model: 'Galaxy M51'
     - regex: '(?:SAMSUNG-)?SM-W201([689])'
       model: 'Galaxy W201$1'
 
