Improves detection for Samsung Galaxy Note 10+

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13387,7 +13387,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?SM-N770[FX]'
       model: 'Galaxy Note 10 Lite'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:U1|XU|[0FUWX])|SM-N976[0BVNQU]|SC-01M|SCV45)'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:U1|XU|[0CFUWX])|SM-N976[0BVNQU]|SC-01M|SCV45)'
       model: 'Galaxy Note 10+'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?(?:SM-N980(?:F/DS|F))'
