Adds detection for Samsung Galaxy F12

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13080,6 +13080,8 @@ Samsung:
       model: 'Galaxy A90'
     - regex: '(?:SAMSUNG-)?SM-A9080'
       model: 'Galaxy A90 5G'
+    - regex: '(?:SAMSUNG-)?SM-F127G(?:[);/ ]|$)'
+      model: 'Galaxy F12'
     - regex: '(?:SAMSUNG-)?SM-F415F(?:[);/ ]|$)'
       model: 'Galaxy F41'
     - regex: '(?:SAMSUNG-)?GT-I9301I'
