Improves detection for Samsung Galaxy C5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13243,7 +13243,7 @@ Samsung:
       model: 'Galaxy On7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-G611[FKLS]'
       model: 'Galaxy On7 Prime'
-    - regex: '(?:SAMSUNG-)?SM-C5000'
+    - regex: '(?:SAMSUNG-)?SM-C500[0X]'
       model: 'Galaxy C5'
     - regex: '(?:SAMSUNG-)?SM-C501[08]'
       model: 'Galaxy C5 Pro'
