Improves detection for Samsung Galaxy C7 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13249,7 +13249,7 @@ Samsung:
       model: 'Galaxy C5 Pro'
     - regex: '(?:SAMSUNG-)?SM-C700[0X]'
       model: 'Galaxy C7'
-    - regex: '(?:SAMSUNG-)?SM-C701[08F]'
+    - regex: '(?:SAMSUNG-)?SM-C701[08FX]'
       model: 'Galaxy C7 Pro'
     - regex: '(?:SAMSUNG-)?SM-C710[08]'
       model: 'Galaxy C8'
