--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11844,3 +11844,21 @@
     model: Galaxy C7
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-C701X Build/MMB29M)
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy C7 Pro
+  os_family: Android
+  browser_family: Android Browser
