Improves detection for Samsung Galaxy A8+ (2018)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13012,7 +13012,7 @@ Samsung:
       model: 'Galaxy A8s'
     - regex: '(?:SAMSUNG-)?SM-A530[MNWX]'
       model: 'Galaxy A8 (2018)'
-    - regex: '(?:SAMSUNG-)?SM-A730F'
+    - regex: '(?:SAMSUNG-)?SM-A730[FX]'
       model: 'Galaxy A8+ (2018)'
     - regex: '(?:SAMSUNG-)?SM-A900[0F]'
       model: 'Galaxy A9'
