--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11862,3 +11862,21 @@
     model: Galaxy C7 Pro
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: AptoideLite/50 (Linux; Android 9; SM-A730X Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 73.0.3683.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A8+ (2018)
+  os_family: Android
+  browser_family: Chrome
