Improves detection for Samsung Galaxy A5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12972,7 +12972,7 @@ Samsung:
       model: 'Galaxy A3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A430F'
       model: 'Galaxy A4'
-    - regex: '(?:SAMSUNG-)?SM-A500[9LSWY]?(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-A500(?:YZ|[9LSWY])?(?:[);/ ]|$)'
       model: 'Galaxy A5'
     - regex: '(?:SAMSUNG-)?SM-A500[0FGHKM]'
       model: 'Galaxy A5 Duos'
