Improves detection for Samsung Galaxy A8

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13002,7 +13002,7 @@ Samsung:
       model: 'Galaxy A71'
     - regex: '(?:SAMSUNG-)?SM-A716(?:U1|[0BUV])(?:[);/ ]|$)'
       model: 'Galaxy A71 5G'
-    - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISY])|SCV32'
+    - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISXY])|SCV32'
       model: 'Galaxy A8'
     - regex: '(?:SAMSUNG-)?SM-G885[FSY]'
       model: 'Galaxy A8 Star'
