--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11898,3 +11898,21 @@
     model: Galaxy A5
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1.1; SM-A800X Build/LMY47X)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A8
+  os_family: Android
+  browser_family: Android Browser
