Adds detection for Samsung Galaxy Golden 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13229,6 +13229,8 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-W201([689])'
       model: 'Galaxy W201$1'
 
+    - regex: '(?:SAMSUNG-)?SM-W2015'
+      model: 'Galaxy Golden 2'
     - regex: '(?:SAMSUNG-)?SM-G850F'
       model: 'Galaxy Alpha'
     - regex: '(?:SAMSUNG-)?SM-G910S'
