--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11916,3 +11916,21 @@
     model: Galaxy A8
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; SM-W2015 Build/KTU84P)
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Golden 2
+  os_family: Android
+  browser_family: Android Browser
