Improves Samsung Galaxy Alpha regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12664,7 +12664,7 @@ Samsung:
       model: 'Galaxy Watch Active 2'
 
     # explicit smartphone models
-    - regex: '(?:SAMSUNG-)?SM-G850[AKLMSWXY]'
+    - regex: '(?:SAMSUNG-)?SM-G850[AFKLMSWXY]'
       model: 'Galaxy Alpha'
     - regex: '(?:SAMSUNG-)?GT-B5330'
       model: 'Galaxy Chat'
@@ -13231,8 +13231,6 @@ Samsung:
 
     - regex: '(?:SAMSUNG-)?SM-W2015'
       model: 'Galaxy Golden 2'
-    - regex: '(?:SAMSUNG-)?SM-G850F'
-      model: 'Galaxy Alpha'
     - regex: '(?:SAMSUNG-)?SM-G910S'
       model: 'Galaxy Round'
     - regex: '(?:SAMSUNG-)?SM-(?:G550(?:FY|T[12]?)|S550TL|G55[01]0|G5520)'
