Improves detection for Samsung Galaxy Alpha

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12664,7 +12664,7 @@ Samsung:
       model: 'Galaxy Watch Active 2'
 
     # explicit smartphone models
-    - regex: '(?:SAMSUNG-)?SM-G850[AFKLMSWXY]'
+    - regex: '(?:SAMSUNG-)?SM-G850(?:8S|[AFKLMSWXY])'
       model: 'Galaxy Alpha'
     - regex: '(?:SAMSUNG-)?GT-B5330'
       model: 'Galaxy Chat'
