Improves detection for Samsung Galaxy Folder 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13265,7 +13265,7 @@ Samsung:
       model: 'Galaxy Z4'
     - regex: '(?:SAMSUNG-)?SM-(?:G150(?:N[0KLS])?|G155S)(?:[);/ ]|$)'
       model: 'Galaxy Folder'
-    - regex: '(?:SAMSUNG-)?(?:SM-G16(?:0N|[05]0?))(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?(?:SM-G16(?:0N|[05]0?|5N))(?:[);/ ]|$)'
       model: 'Galaxy Folder 2'
     - regex: '(?:SAMSUNG-)?SM-J321AZ(?:[);/ ]|$)'
       model: 'Galaxy Sol'
