Adds detection for Samsung Galaxy Core Lite LTE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12716,6 +12716,8 @@ Samsung:
       model: 'Galaxy Core'
     - regex: '(?:SAMSUNG-)?SM-G386W'
       model: 'Galaxy Core LTE'
+    - regex: '(?:SAMSUNG-)?SM-G3589W'
+      model: 'Galaxy Core Lite LTE'
     - regex: '(?:SAMSUNG-)?GT-I8320'
       model: 'H1'
     - regex: '(?:SAMSUNG-)?GT-I85[23]0'
