--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11970,3 +11970,21 @@
     model: Galaxy Folder 2
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 Linux; U; Android 4.4; SM-G3589W Build/KOT49H AppleWebKit/534.24 KHTML, like Gecko Version/4.0 Mobile Safari/534.24
+  os:
+    name: Android
+    version: "4.4"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.24"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy Core Lite LTE
+  os_family: Android
+  browser_family: Android Browser
