Improves detection for Samsung Galaxy J3 (2016)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13132,7 +13132,7 @@ Samsung:
       model: 'Galaxy J3 Luna Pro'
     - regex: '(?:SAMSUNG-)?SM-J3109'
       model: 'Galaxy J3 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-J320(?:[ZF]N|R4|W8|YZ|[AFGHMNPVY])'
+    - regex: '(?:SAMSUNG-)?SM-(?:J300H|J320(?:[ZF]N|R4|W8|YZ|[AFGHMNPVY]))'
       model: 'Galaxy J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J330(?:FN|[08FGLN])|J327(?:R7|U))(?:[);/ ]|$)'
       model: 'Galaxy J3 (2017)'
