--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -11988,3 +11988,21 @@
     model: Galaxy Core Lite LTE
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Mozilla/5.0 Linux; U; Android 5.1.1; SM-J300H Build/JDQ39 AppleWebKit/534.30 KHTML, like Gecko Version/4.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy J3 (2016)
+  os_family: Android
+  browser_family: Android Browser
