Improves detection for Samsung Galaxy S10 Lite

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12912,7 +12912,7 @@ Samsung:
       model: 'Galaxy S9+'
     - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977[BNPTU])|SCV41|SC-03L)'
       model: 'Galaxy S10'
-    - regex: '(?:SAMSUNG-)?SM-G770(?:U1|F)'
+    - regex: '(?:SAMSUNG-)?SM-(?:S10 Lite|G770(?:U1|F))'
       model: 'Galaxy S10 Lite'
     - regex: '(?:SAMSUNG-)?(?:SM-G975[08FUNWX]|SCV42|SC-04L)'
       model: 'Galaxy S10+'
