--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -12006,3 +12006,21 @@
     model: Galaxy J3 (2016)
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 8.0; SM-S10 Lite) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.0.0 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "8.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 39.0.0.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy S10 Lite
+  os_family: Android
+  browser_family: Chrome
