Adds detection for Samsung Galaxy J8 Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13190,6 +13190,8 @@ Samsung:
       model: 'Galaxy J7 7'
     - regex: '(?:SAMSUNG-)?SM-J810'
       model: 'Galaxy J8'
+    - regex: 'SM-J8 Plus'
+      model: 'Galaxy J8 Plus'
     - regex: 'SM-J8 Pro'
       model: 'Galaxy J8 Pro'
     - regex: 'SM-J9\[7\] Prime'
