Improves detection for Samsung Galaxy A9 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13024,7 +13024,7 @@ Samsung:
       model: 'Galaxy A9 (2018)'
     - regex: '(?:SAMSUNG-)?SM-G885[08]'
       model: 'Galaxy A9 Star'
-    - regex: '(?:SAMSUNG-)?SM-(?:A910[0F]|G887N)'
+    - regex: '(?:SAMSUNG-)?SM-(?:A9 Pro|A910[0F]|G887N)'
       model: 'Galaxy A9 Pro'
     - regex: '(?:SAMSUNG-)?SM-A105[FGMN]'
       model: 'Galaxy A10'
