Improves detection for Samsung Galaxy J7 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13176,7 +13176,7 @@ Samsung:
       model: 'Galaxy J7 Max'
     - regex: '(?:SAMSUNG-)?SM-(?:S727VL|S737TL)'
       model: 'Galaxy J7 Sky Pro'
-    - regex: '(?:SAMSUNG-)?SM-J730(?:GM|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-(?:J7 Pro|J730(?:GM|[FG]))'
       model: 'Galaxy J7 Pro'
     - regex: '(?:SAMSUNG-)?SM-J701[FM]'
       model: 'Galaxy J7 Core' # also Galaxy J7 Nxt and Galaxy J7 Neo
