Improves detection for Samsung Galaxy M20

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13214,7 +13214,7 @@ Samsung:
       model: 'Galaxy M11'
     - regex: '(?:SAMSUNG-)?SM-M127[FG]'
       model: 'Galaxy M12'
-    - regex: '(?:SAMSUNG-)?SM-M205[FGMN]'
+    - regex: '(?:SAMSUNG-)?SM-(?:M205[FGMN]|M20)(?:[);/ ]|$)'
       model: 'Galaxy M20'
     - regex: '(?:SAMSUNG-)?SM-M215F'
       model: 'Galaxy M21'
