Improves detection for Samsung Galaxy M30s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13218,7 +13218,7 @@ Samsung:
       model: 'Galaxy M20'
     - regex: '(?:SAMSUNG-)?SM-M215F'
       model: 'Galaxy M21'
-    - regex: '(?:SAMSUNG-)?SM-M307(?:FN|[0F])'
+    - regex: '(?:SAMSUNG-)?SM-(?:M307(?:FN|[0F])|M30s)'
       model: 'Galaxy M30s'
     - regex: '(?:SAMSUNG-)?SM-M305?'
       model: 'Galaxy M30'
