Improves detection for Samsung Galaxy Core LTE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12862,7 +12862,7 @@ Samsung:
       model: 'Galaxy Core Prime'
     - regex: '(?:SAMSUNG-)?SM-G361[FH]?'
       model: 'Galaxy Core Prime Value Edition'
-    - regex: '(?:SAMSUNG-)?SM-(?:G386F|G3586V)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G386F|G3518(?:_TD)?|G3586V)'
       model: 'Galaxy Core LTE'
     - regex: '(?:SAMSUNG-)?SM-G3568V'
       model: 'Galaxy Core Mini 4G'
