Improves detection for Samsung Galaxy A7 (2017)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12996,7 +12996,7 @@ Samsung:
       model: 'Galaxy A7'
     - regex: '(?:SAMSUNG-)?SM-A710[08FKLMSXY]'
       model: 'Galaxy A7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-A720[FSX]'
+    - regex: '(?:SAMSUNG-)?SM-A720[FMSX]'
       model: 'Galaxy A7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[CFGNX])'
       model: 'Galaxy A7 (2018)'
