Improves detection for Samsung Galaxy J4

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13138,7 +13138,7 @@ Samsung:
       model: 'Galaxy J3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J337(?:VPP|[AWPUV])(?:[);/ ]|$)'
       model: 'Galaxy J3 (2018)'
-    - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
+    - regex: '(?:SAMSUNG-)?SM-(?:G400[FG]|J400[FGM])'
       model: 'Galaxy J4'
     - regex: '(?:SAMSUNG-)?SM-J500(?:FN|N0|[78FGHMY])(?:[);/ ]|$)'
       model: 'Galaxy J5 (2015)'
