--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -12186,3 +12186,39 @@
     model: Galaxy A7 (2017)
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 Linux; Android 7.0; SAMSUNG SM-G400G Build/NRD90M AppleWebKit/537.36 KHTML, like Gecko SamsungBrowser/9.2 Chrome/67.0.3396.87 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "9.2"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy J4
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 Linux; Android 7.0; SAMSUNG SM-G400F Build/NRD90M AppleWebKit/537.36 KHTML, like Gecko SamsungBrowser/9.2 Chrome/67.0.3396.87 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    version: "9.2"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy J4
+  os_family: Android
+  browser_family: Chrome
