Change Galaxy Tab Q from phablet to tablet

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13412,7 +13412,7 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?SM-T2519'
       model: 'Galaxy Tab Q'
-      device: 'phablet'
+      device: 'tablet'
 
     - regex: '(?:SAMSUNG-)?SM-W750V'
       model: 'Ativ SE'
