--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9653,3 +9653,21 @@
     model: Galaxy Tab S6 10.4" Lite WiFi
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 4.3; SM-T2519 Build/MMB29M)
+  os:
+    name: Android
+    version: "4.3"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab Q
+  os_family: Android
+  browser_family: Android Browser
