Improves detection for Samsung Galaxy Note 10.1"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12354,7 +12354,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-N5120'
       device: 'tablet'
       model: 'Galaxy Note 8.0" LTE'
-    - regex: '(?:SAMSUNG-)?GT-N8000'
+    - regex: '(?:SAMSUNG-)?(?:GT|SM)-N8000'
       device: 'tablet'
       model: 'Galaxy Note 10.1"'
     - regex: '(?:SAMSUNG-)?GT-N8010'
